// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded 1`] = `
<div>
  <div
    className="header-arrow"
  />
  <div
    className="window"
  >
    <header
      className="toolbar toolbar-header"
    >
      <h1
        className="title"
      >
        Hotelier
      </h1>
    </header>
    <div
      className="window-content"
    >
      <div
        className="pane"
      >
        <div>
          <ul
            className="list-group"
          >
            <li
              className="list-group-item server-item"
            >
              <div
                className="pull-left server-name server-name--running"
                onClick={[Function]}
              >
                server1
              </div>
              <div
                className="pull-right"
              >
                <button
                  className="btn btn-default mr-1 d-inline"
                  onClick={[Function]}
                >
                  <span
                    className="icon icon-arrows-ccw"
                  />
                </button>
                <button
                  aria-label="toggle status"
                  className="animated btn btn-negative text-white"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="tcon-visuallyhidden"
                  >
                    toggle status
                  </span>
                  <span
                    className="tcon tcon-remove tcon-remove--chevron-right btn-negative text-white"
                  />
                </button>
              </div>
            </li>
            <li
              className="list-group-item server-item"
            >
              <div
                className="pull-left server-name server-name--stopped"
                onClick={[Function]}
              >
                server2
              </div>
              <div
                className="pull-right"
              >
                <button
                  className="btn btn-default mr-1 d-none"
                  onClick={[Function]}
                >
                  <span
                    className="icon icon-arrows-ccw"
                  />
                </button>
                <button
                  aria-label="toggle status"
                  className="animated btn tcon-transform btn-default"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="tcon-visuallyhidden"
                  >
                    toggle status
                  </span>
                  <span
                    className="tcon tcon-remove tcon-remove--chevron-right tcon-transform btn-default"
                  />
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <footer
      className="toolbar toolbar-footer"
    >
      <div
        className="toolbar-actions pull-left"
      >
        <button
          className="btn btn-default"
          onClick={[Function]}
        >
          Hotel
        </button>
      </div>
      <div
        className="toolbar-actions pull-right"
      >
        <div
          className="btn-group"
        >
          <button
            className="btn btn-default"
            onClick={[Function]}
          >
            <span
              className="icon icon-arrows-ccw"
              title="Refresh"
            />
          </button>
          <button
            className="btn btn-default"
            id="close-app"
            onClick={[Function]}
          >
            <span
              className="icon icon-cancel"
              title="Quit"
            />
          </button>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`loading 1`] = `
<div>
  <div
    className="header-arrow"
  />
  <div
    className="window"
  >
    <header
      className="toolbar toolbar-header"
    >
      <h1
        className="title"
      >
        Hotelier
      </h1>
    </header>
    <div
      className="window-content"
    >
      <div
        className="pane"
      >
        <div
          className="summary"
        >
          Loading…
        </div>
        <div>
          <ul
            className="list-group"
          />
        </div>
      </div>
    </div>
    <footer
      className="toolbar toolbar-footer"
    >
      <div
        className="toolbar-actions pull-left"
      >
        <button
          className="btn btn-default"
          onClick={[Function]}
        >
          Hotel
        </button>
      </div>
      <div
        className="toolbar-actions pull-right"
      >
        <div
          className="btn-group"
        >
          <button
            className="btn btn-default"
            onClick={[Function]}
          >
            <span
              className="icon icon-arrows-ccw"
              title="Refresh"
            />
          </button>
          <button
            className="btn btn-default"
            id="close-app"
            onClick={[Function]}
          >
            <span
              className="icon icon-cancel"
              title="Quit"
            />
          </button>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
